# sdl2-empty-project

./: CMakeLists.txt
dependencies/: setup
src/: main.cpp
